# flappy_bird

./: Cargo.toml
assets/: bird.aseprite  pipe.aseprite
src/: main.rs
src/game/: game.rs
